# mira-game

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml
assets/maps/: debug-area-2.glb  debug-or.glb  debug.glb  debug1_area.glb
src/: main.rs  manager.rs
src/entities/: mod.rs
src/entities/player/: mod.rs  player_base.rs  player_input.rs
src/environment/: base.rs  chunk_builder.rs  chunk_handler.rs  mod.rs
src/logic/: loading_handler.rs  mod.rs
